# meginfo

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
fiff/: blocks.tsv  kinds.tsv  primitives.tsv  tags.tsv
src/: config.rs  enums.rs  graph.rs  lib.rs  main.rs  nomparser.rs  parser.rs  primitive.rs  query.rs  tag.rs  tree.rs
tests/: read_tags.rs
