[package]
name = "meginfo"
version = "0.1.0"
edition = "2021"
description = "Reads fif files fast"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.22", features = ["derive"] }
csv = "1.2.2"
nom = "7.1.3"
petgraph = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
termtree = "0.4.1"
