[package]
name = "fiff"
version = "0.1.0"
edition = "2021"
description = "Reads fif files fast"

[dependencies]
anyhow = "1.0.72"
atty = "0.2.14"
clap = { version = "4.3.22", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
log = "0.4.20"
nom = "7.1.3"
petgraph = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
termtree = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
